# patchsim

./: .gitignore  README.md  pyproject.toml
configs/: ka-fmd-baseline.yaml  ka-fmd-global.yaml  sample-sir-ode.yaml
docs/: index.md
docs/reference/: core.md  models.md  utils.md
src/patchsim/: cli.py
src/patchsim/core/: model.py  simulation.py
src/patchsim/models/: ka-fmd-sirsv-discrete.py  sample-sir-ode.py
src/patchsim/utils/: io.py  loader.py  logger.py  viz.py
